--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "url": "https://github.com/raphamorim/ranza/issues"
   },
   "homepage": "https://github.com/raphamorim/ranza",
-  "preferGlobal": "true"
+  "preferGlobal": "true",
+  "dependencies": {
+    "glob": "^5.0.3",
+    "node-watch": "^0.3.4",
+    "nodemon": "^1.3.7"
+  }
 }
