--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ranza",
-  "version": "0.1.0",
-  "description": "",
+  "version": "0.1.3",
+  "description": "Syncronize and manage all project dependencies",
   "main": "./lib/index.js",
   "bin": "./bin/ranza.js",
   "scripts": {
