--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "glob": "^5.0.3",
     "node-watch": "^0.3.4",
-    "nodemon": "^1.3.7"
+    "nodemon": "^1.3.7",
+    "supports-color": "^1.3.1"
   }
 }
