--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ranza",
-  "version": "0.1.9",
+  "version": "0.2.0",
   "description": "Syncronize and manage all project dependencies",
   "main": "./lib/index.js",
   "bin": "./bin/ranza.js",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/raphamorim/ranza",
   "preferGlobal": "true",
   "dependencies": {
+    "bluebird": "^2.9.18",
     "glob": "^5.0.3",
     "node-watch": "^0.3.4",
     "nodemon": "^1.3.7",
