--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ranza",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "Syncronize and manage all project dependencies",
   "main": "./lib/index.js",
   "bin": "./bin/ranza.js",
@@ -22,6 +22,7 @@
   "dependencies": {
     "bluebird": "^2.9.20",
     "glob": "^5.0.3",
+    "grunt": "*",
     "node-watch": "^0.3.4",
     "supports-color": "^1.3.1"
   }
