--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./lib/index.js",
   "bin": "./bin/ranza.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,8 @@
     "grunt": "*",
     "node-watch": "^0.3.4",
     "supports-color": "^1.3.1"
+  },
+  "devDependencies": {
+    "mocha": "^2.2.1"
   }
 }
