--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ranza",
-  "version": "0.2.7",
+  "version": "1.0.0",
   "description": "Syncronize and manage all project dependencies",
-  "main": "./lib/index.js",
+  "main": "./index.js",
   "bin": "./bin/ranza.js",
   "scripts": {
     "test": "make test"
@@ -22,7 +22,6 @@
   "dependencies": {
     "bluebird": "^2.9.20",
     "glob": "^5.0.3",
-    "grunt": "*",
     "node-watch": "^0.3.4",
     "supports-color": "^1.3.1"
   },
