--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./index.js",
   "bin": "./bin/ranza.js",
   "scripts": {
-    "test": "make test"
+    "test": "mocha --require assert --recursive --growl"
   },
   "repository": {
     "type": "git",
