--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bluebird": "^2.9.20",
     "glob": "^5.0.3",
+    "reflect": "^0.1.3",
     "supports-color": "^1.3.1"
   },
   "devDependencies": {
