--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "homepage": "https://github.com/raphamorim/ranza",
   "preferGlobal": "true",
   "dependencies": {
+    "babel-core": "^5.7.4",
     "bluebird": "^2.9.20",
     "glob": "^5.0.3",
-    "reflect": "^0.1.3",
     "supports-color": "^1.3.1"
   },
   "devDependencies": {
